--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   "author": "Daniel",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server index.js"
+    "start": "webpack-dev-server index.js",
+    "dev": "webpack"
   },
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
