--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "author": "Daniel",
   "license": "MIT",
   "scripts": {
-    "start": "webpack-dev-server index.js",
+    "start": "webpack-dev-server --config webpack.config.js",
     "dev": "webpack"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
@@ -20,6 +21,9 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
